# LiberTEM-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  NOTES.md  README.md  build.rs  check-licenses-ci.sh  coverage.sh  pyproject.toml  update-licenses.sh
.github/workflows/: CI.yml
bs-sys/: Cargo.toml  LICENSE  build.rs
bs-sys/src/: lib.rs
common/: Cargo.toml  README.md
common/benches/: casting.rs
common/src/: background_thread.rs  cam_client.rs  decoder.rs  frame_chunked_iterator.rs  frame_iterator.rs  frame_stack.rs  generic_cam_client.rs  generic_connection.rs  generic_receiver.rs  lib.rs  py_buffer_for_slot.rs  py_cam_client.rs  py_connection.rs  py_frame_iterator.rs  py_frame_stack.rs  stats.rs  tcp.rs  tracing.rs  utils.rs
examples/: testchunked.py  testflame.py  testrepeat.py  testserialize.py  testtooslow.py  testudf.py  testuser.py
ipc_test/: Cargo.toml  README.md  run-consumer.sh  run-producer.sh
ipc_test/examples/consumer/: main.rs
ipc_test/examples/producer/: main.rs
ipc_test/src/: backend_memfd.rs  backend_shm.rs  common.rs  freestack.rs  lib.rs  slab.rs  test_utils.rs
k2o/: .gitignore  Cargo.toml  NOTES.md
k2o/benches/: assemble_benchmarks.rs  decode_benchmarks.rs
k2o/src/: acquisition.rs  allocators.rs  args.rs  assemble.rs  block.rs  block_is.rs  block_summit.rs  cli_args.rs  control.rs  decode.rs  dio.rs  events.rs  frame.rs  frame_is.rs  frame_summit.rs  helpers.rs  lib.rs  net.rs  ordering.rs  params.rs  recv.rs  result_frame.rs  runtime.rs  tracing.rs  write.rs
libertem_asi_mpx3/: Cargo.toml  README.md  THIRDPARTY.yml  pyproject.toml
libertem_asi_mpx3/examples/: live_server.py  mpx3_example_03_acquisition.py  simple.py
libertem_asi_mpx3/src/: background_thread.rs  base_types.rs  cam_client.rs  common.rs  decoder.rs  frame_stack.rs  frame_stack_py.rs  lib.rs  main_py.rs  receiver.rs  stats.rs
libertem_asi_tpx3/: Cargo.toml  README.md  THIRDPARTY.yml  pyproject.toml
libertem_asi_tpx3/examples/: acquisition.py  compare.py  crash.py  live_client.py  live_server.py  run_udf.py  sim.py  simple.py
libertem_asi_tpx3/src/: background_thread.rs  cam_client.rs  chunk_stack.rs  common.rs  csr_view.rs  csr_view_raw.rs  deserialize.rs  exceptions.rs  frame_stack.rs  headers.rs  headers_py.rs  lib.rs  main_py.rs  receiver.rs  serialize.rs  sparse_csr.rs  stats.rs  stream.rs
libertem_dectris/: Cargo.toml  LICENSE  README.md  THIRDPARTY.yml  pyproject.toml
libertem_dectris/examples/: live_server.py  passive.py  passive_low_level.py  simple.py  testchunked.py  testflame.py  testrepeat.py  testserialize.py  testtooslow.py  testudf.py  testuser.py
libertem_dectris/src/: background_thread.rs  base_types.rs  bin_fmt.rs  bs.rs  cam_client.rs  common.rs  decoder.rs  dectris_py.rs  frame_stack.rs  frame_stack_py.rs  lib.rs  main.rs  receiver.rs  shm.rs  sim.rs  sim_data_source.rs  sim_gen.rs  stats.rs
libertem_k2is/: Cargo.toml  README.md  pyproject.toml
libertem_k2is/examples/: examples.py  fast_acq_integrate.py  iterate_new.py  k2is_live.py  write_and_iterate.py  writer_only.py
libertem_k2is/src/: background_thread.rs  bgthread.rs  config.rs  decoder.rs  frame_meta.rs  lib.rs  main_py.rs  shm_helpers.rs
libertem_qd_mpx/: Cargo.toml  README.md  THIRDPARTY.yml  pyproject.toml
libertem_qd_mpx/benches/: decoders.rs
libertem_qd_mpx/examples/: simple.py
libertem_qd_mpx/src/: background_thread.rs  base_types.rs  decoder.rs  lib.rs  main_py.rs
playegui/: Cargo.toml
playegui/src/: app.rs  background.rs  lib.rs  main.rs  messages.rs  receiver.rs
serval-client/: Cargo.toml
serval-client/src/: lib.rs
src/: bin.rs  bs.rs  cam_client.rs  cat.rs  common.rs  dectris_py.rs  exceptions.rs  frame_stack.rs  inspect.rs  lib.rs  main.rs  repeat.rs  rusted_dectris.rs  rusted_dectris_py.rs  shm_recv.rs  sim.rs
stats/: Cargo.toml
stats/src/: lib.rs
