[workspace]
resolver = "2"
members = [
    "libertem_dectris",
    "libertem_asi_tpx3",
    "libertem_asi_mpx3",
    "libertem_qd_mpx",
    "libertem_k2is",
    "k2o",
    "ipc_test",
    "playegui",
    "bs-sys",
    "stats",
    "serval-client", "common",
]
resolver = "2"

[profile.release]
debug = true
