[workspace]
members = [
    "libertem_dectris",
    "libertem_asi_tpx3",
    "libertem_asi_mpx3",
    "libertem_qd_mpx",
    "ipc_test",
    "playegui",
    "bs-sys",
    "stats",
    "serval-client", "common",
]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
pyo3 = { version = "0.27", features = ["abi3-py37"] }
numpy = "0.27.1"
thiserror = "2.0.17"
tempfile = "3.10.1"
serde = "1.0.210"
serde_json = "1.0.128"
opentelemetry = "0.25.0"
env_logger = "0.11.5"
log = "0.4.22"
ndarray = { version = "0.15.6" }
zerocopy = "0.7.34"
