[package]
name = "common"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.14"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
pyo3 = { version = "0.23", features = ["abi3-py37"] }
numpy = "0.23"
serde = "1.0.210"
tempfile = "3.10.1"
thiserror = "1.0.64"
log = "0.4.22"
ndarray = { version = "0.15.6" }
zerocopy = "0.7.35"
num = "0.4.3"
multiversion = "0.7.4"
opentelemetry = "0.25.0"
opentelemetry-otlp = "0.25.0"
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "io-util", "rt-multi-thread"] } 

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "casting"
harness = false

[lints.rust]
unused_must_use = "deny"
