[package]
name = "common"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.3.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
pyo3 = { workspace = true }
numpy = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
zerocopy = { workspace = true }
num = "0.4.3"
multiversion = "0.8.0"
opentelemetry = { workspace = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "io-util", "rt-multi-thread"] } 

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "casting"
harness = false

[lints]
workspace = true
