[package]
name = "ipc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
bytemuck = "1.12.3"
clap = { version = "4.0.29", features = ["derive"] }
crossbeam = { version ="0.8.2", features = ["crossbeam-channel"] }
memmap2 = "0.5.8"
page_size = "0.5.0"
raw_sync = "0.1.5"
serde = { version = "1.0.149", features = ["derive"] }
log = "0.4.17"
tempfile = "3.3.0"
shared_memory = "0.12.4"

[target.'cfg(target_os = "linux")'.dependencies]
memfd = "0.6.2"
sendfd = "0.4.3"

[target.'cfg(not(windows))'.dependencies]
nix = "0.26.2"