[package]
name = "ipc-test"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0.64"
bincode = "1.3.3"
bytemuck = "1.12.3"
clap = { version = "4.0.29", features = ["derive"] }
crossbeam = { version ="0.8.2", features = ["crossbeam-channel"] }
memmap2 = "0.5.8"
page_size = "0.5.0"
raw_sync = "0.1.5"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
tempfile = "3.3.0"
shared_memory = "0.12.4"

[target.'cfg(target_os = "linux")'.dependencies]
memfd = "0.6.2"
sendfd = "0.4.3"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29.0", features = ["poll"] }

[lints.rust]
unused_must_use = "deny"
