[package]
name = "ipc-test"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
bincode = "1.3.3"
bytemuck = "1.12.3"
clap = { version = "4.5", features = ["derive"] }
crossbeam = { version ="0.8.2", features = ["crossbeam-channel"] }
memmap2 = "0.9.9"
page_size = "0.6.0"
raw_sync = "0.1.5"
serde = { version = "1.0.210", features = ["derive"] }
log = { workspace = true }
tempfile = "3.3.0"
shared_memory = "0.12.4"

[target.'cfg(target_os = "linux")'.dependencies]
memfd = "0.6.2"
sendfd = "0.4.3"

[target.'cfg(not(windows))'.dependencies]
nix = { workspace = true, features = ["poll"] }

[lints]
workspace = true

[dev-dependencies]
rand = "0.9.2"
