[package]
name = "k2o"
version = "0.2.9"
edition = "2021"

[dependencies]
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
nix = "0.25.0"
unroll = "0.1.5"
num = "0.4.0"
itertools = "0.10.1"
tokio = { version = "1", features = ["full"] }
# futures = "0.3.15"
memmap2 = "0.5.2"
ndarray = { version="0.15.4", features = ["approx"]}
ndarray-npy = "0.8.1"
jemallocator = "0.5.0"
rayon = "1.5.1"
human_bytes = { version="0.3.1", features=["bibytes"] }
clap = { version="3.1.8", features=["derive"]}
hdf5 = { version="0.8.1", features=[], optional = true }
opentelemetry = { version="0.17.0", features=["rt-tokio"] }
opentelemetry-otlp = { version="0.10.0", features=[] }
opentelemetry-semantic-conventions = "0.9.0"
ipc-test = { path = "../ipc_test" }
shared_memory = "0.12.4"
bytemuck = "1.12.3"
tempfile = "3.5.0"
log = "0.4.18"
dbus = "0.9.7"
libc = "0.2.147"
env_logger = "0.10.0"

[features]
hdf5 = ["dep:hdf5"]

[dev-dependencies]
criterion = "0.3.4"
criterion-linux-perf = "0.1.0"
tempfile = "3.5.0"

[[bench]]
name = "decode_benchmarks"
harness = false

[[bench]]
name = "assemble_benchmarks"
harness = false
