[package]
name = "libertem-asi-mpx3"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.11"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libertem_asi_mpx3"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
env_logger = "0.9.3"
log = "0.4.17"
memmap2 = "0.5.6"
numpy = "0.17.0"
pyo3 = { version = "0.17", features = ["abi3-py37"] }
serde = { version = "1.0.143", features = ["derive"] }
spin_sleep = "1.1.1"
ipc-test = { path = "../ipc_test" }
serval-client = { path = "../serval-client" }
stats = { path = "../stats" }
nix = "0.26.1"
zerocopy = "0.6.1"
md5 = "0.7.0"

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
tempfile = "3.3.0"
