[package]
name = "libertem-asi-mpx3"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.14"
edition = "2021"
readme = "README.md"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libertem_asi_mpx3"
crate-type = ["cdylib"]

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
ipc-test = { path = "../ipc_test" }
serval-client = { path = "../serval-client" }
stats = { path = "../stats" }
common = { path = "../common" }
zerocopy = { workspace = true }
num = "0.4.3"
thiserror = { workspace = true }
opentelemetry = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
tempfile = "3.3.0"

[lints.rust]
unused_must_use = "deny"
