[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "libertem-asi-mpx3"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "opentelemetry-api",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
