[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "libertem-asi-mpx3"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "opentelemetry-api",
]
dynamic = ["version"]
readme = "README.md"

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
