[package]
name = "libertem-asi-tpx3"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.2"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libertem_asi_tpx3"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
env_logger = "0.9.3"
log = "0.4.17"
memmap2 = "0.5.6"
numpy = "0.17.0"
pyo3 = { version = "0.17", features = ["abi3-py37"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
spin_sleep = "1.1.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
zmq = { version = "0.9.2", features = ["vendored"] }
ipc-test = { path = "../ipc_test" }
sendfd = "0.4.3"
tempfile = "3.3.0"
nix = "0.26.1"
zerocopy = "0.6.1"
num-traits = "0.2.15"

[features]
extension-module = ["pyo3/extension-module"]
