[package]
name = "libertem-asi-tpx3"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.12"
edition = "2021"
readme = "README.md"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libertem_asi_tpx3"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
env_logger = "0.9.3"
log = "0.4.17"
numpy = "0.21"
pyo3 = { version = "0.21", features = ["abi3-py37"] }
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
common = { path = "../common" }
zerocopy = "0.7.35"
page_size = "0.5.0"

[dev-dependencies]
tempfile = "3.3.0"

[features]
extension-module = ["pyo3/extension-module"]
