[package]
name = "libertem-asi-tpx3"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.3.0"
edition = "2021"
readme = "README.md"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libertem_asi_tpx3"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
env_logger = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
common = { path = "../common" }
zerocopy = { workspace = true }
page_size = "0.5.0"
opentelemetry = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.3.0"

[features]
extension-module = ["pyo3/extension-module"]

[lints]
workspace = true
