[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "libertem-asi-tpx3"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "opentelemetry-api",
]

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
