[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "libertem-asi-tpx3"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "opentelemetry-api",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
