[package]
name = "libertem-dectris"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.14"
edition = "2021"
readme = "README.md"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libertem_dectris"
crate-type = ["cdylib"]

[[bin]]
name = "libertem-dectris-tool"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.64"
bincode = "1.3.3"
bs_sys = { path = "../bs-sys" }
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
memmap2 = "0.5.6"
numpy = "0.23"
pyo3 = { version = "0.23", features = ["abi3-py37"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
spin_sleep = "1.1.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
zmq = { version = "0.10.0", features = [] }
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
common = { path = "../common" }
nix = "0.29.0"
lz4 = "1.24.0"
zerocopy = "0.7.35"
md5 = "0.7.0"
num = "0.4.3"
opentelemetry = "0.25.0"

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
tempfile = "3.3.0"

[lints.rust]
unused_must_use = "deny"
