[package]
name = "libertem_k2is"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.14"
edition = "2021"
readme = "README.md"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "libertem_k2is"
# crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["abi3-py39"] }
numpy = "0.21.0"
k2o = { path = "../k2o" }
common = { path = "../common" }
stats = { path = "../stats" }
opentelemetry = { version = "0.25" }
tokio = "1.21.0"
ipc-test = { path = "../ipc_test" }
bincode = "1.3.3"
sendfd = "0.4.3"
env_logger = "0.10.0"
log = "0.4.18"
num = "0.4.3"
zerocopy = "0.7.35"
serde = "1.0.210"
thiserror = "1.0.63"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

[features]
extension-module = ["pyo3/extension-module"]
hdf5 = []
