[build-system]
requires = ["maturin>=1.3.1,<1.4"]
build-backend = "maturin"

[project]
name = "k2opy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

