[build-system]
requires = ["maturin>=1.3.1,<2"]
build-backend = "maturin"

[project]
name = "libertem-k2is"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

