[package]
name = "libertem_qd_mpx"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.12"
edition = "2021"
readme = "README.md"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "libertem_qd_mpx"
# crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
env_logger = "0.9.3"
log = "0.4.17"
pyo3 = { version = "0.21.0", features = ["abi3-py37"] }
serde = { version = "1.0.143", features = ["derive"] }
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
common = { path = "../common" }
zerocopy = "0.7.35"
numpy = "0.21.0"
num = "0.4.3"
thiserror = "1.0.61"
encoding_rs = { version = "0.8.34", features = [] }
itertools = "0.13.0"
rand = "0.8.5"
criterion = "0.5.1"

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.38.1", features = ["rt", "net", "time", "sync", "io-util", "rt-multi-thread"] } 

[[bench]]
name = "decoders"
harness = false
