[package]
name = "libertem_qd_mpx"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.3.0"
edition = "2021"
readme = "README.md"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "libertem_qd_mpx"
# crate-type = ["cdylib"]

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
serde = { version = "1.0.210", features = ["derive"] }
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
common = { path = "../common" }
zerocopy = { workspace = true }
num = "0.4.3"
thiserror = { workspace = true }
encoding_rs = { version = "0.8.34", features = [] }
itertools = "0.13.0"
rand = "0.8.5"
criterion = "0.5.1"
opentelemetry = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1", features = ["rt", "net", "time", "sync", "io-util", "rt-multi-thread"] } 

[[bench]]
name = "decoders"
harness = false

[lints]
workspace = true
