[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "libertem_qd_mpx"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy>=1.16.0",
    "opentelemetry-api",
]
dynamic = ["version"]
readme = "README.md"

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
