[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "libertem-qd-mpx"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.16.0",
    "opentelemetry-api",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-rs/"

[tool.maturin]
features = ["pyo3/extension-module"]
