[package]
name = "playegui"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22"
eframe = { version = "0.22", features = ["default_fonts", "glow"] }
serde = { version = "1.0.210", features = ["derive"] }
tracing-subscriber = "0.3"
serde_json = "1.0.128"
log = "0.4.22"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
bs_sys = { path = "../bs-sys" }
ndarray-stats = "0.5.1"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"
futures-util = "0.3.26"
tungstenite = "0.18.0"
rayon = "1.6.1"
egui_extras = { version = "0.22", features = ["image"] }
image = "0.24.5"
# scarlet = "1.1.0"
# colors-transform = "0.2.11"
