[package]
name = "playegui"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.32.3"
eframe = { version = "0.32.3", features = ["default_fonts", "glow"] }
egui_extras = { version = "0.32.3", features = ["image"] }
serde = { workspace = true }
tracing-subscriber = "0.3"
serde_json = { workspace = true }
log = { workspace = true }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ndarray = { workspace = true, features = ["rayon"] }
bs_sys = { path = "../bs-sys" }
ndarray-stats = "0.7.0"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.28.0"
url = "2.3.1"
futures-util = "0.3.26"
tungstenite = "0.28.0"
rayon = "1.6.1"
image = "0.25.9"
egui_plot = "0.33.0"
# scarlet = "1.1.0"
# colors-transform = "0.2.11"

[lints]
workspace = true
