[package]
name = "serval-client"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["json", "blocking", "charset"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2.3.1"

[lints]
workspace = true
