[package]
name = "stats"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"

[lints.rust]
unused_must_use = "deny"
